src/test/ui/type-alias-impl-trait/issue-57611-trait-alias.nll.stderr
error: implementation of `Fn` is not general enough
  --> $DIR/issue-57611-trait-alias.rs:25:9
   |
LL |         |x| x
   |         ^^^^^ implementation of `Fn` is not general enough
   |
   = note: closure with signature `fn(&'2 X) -> &X` must implement `Fn<(&'1 X,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `Fn<(&'2 X,)>`, for some specific lifetime `'2`

error: implementation of `FnOnce` is not general enough
  --> $DIR/issue-57611-trait-alias.rs:25:9
   |
LL |         |x| x
   |         ^^^^^ implementation of `FnOnce` is not general enough
   |
   = note: closure with signature `fn(&'2 X) -> &X` must implement `FnOnce<(&'1 X,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `FnOnce<(&'2 X,)>`, for some specific lifetime `'2`

error: aborting due to 2 previous errors

